[tool.poetry]
name = "rosa-task-executor"
version = "0.1.0"
description = "Task Executor (worker) for ROSA system"
authors = ["Wojciech Gruszka <wojciech@gruszka.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
celery = "^4.4.5"
rosatasks = {git = "https://github.com/RSOA-WEITI-2020/ROSATasks"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
pytest = "^5.4.1"
nox = "^2019.11.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
 